; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_ccmds.c_SV_ParseCIDRNotation.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_ccmds.c_SV_ParseCIDRNotation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@NA_UNSPEC = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@NA_IP = common dso_local global i64 0, align 8
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*, i8*)* @SV_ParseCIDRNotation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SV_ParseCIDRNotation(%struct.TYPE_4__* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = call i8* @strchr(i8* %9, i8 signext 47)
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i8*, i8** %8, align 8
  store i8 0, i8* %14, align 1
  %15 = load i8*, i8** %8, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %8, align 8
  br label %17

17:                                               ; preds = %13, %3
  %18 = load i8*, i8** %7, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = load i32, i32* @NA_UNSPEC, align 4
  %21 = call i32 @NET_StringToAdr(i8* %18, %struct.TYPE_4__* %19, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %17
  %24 = load i32, i32* @qtrue, align 4
  store i32 %24, i32* %4, align 4
  br label %73

25:                                               ; preds = %17
  %26 = load i8*, i8** %8, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %60

28:                                               ; preds = %25
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @atoi(i8* %29)
  %31 = load i32*, i32** %6, align 8
  store i32 %30, i32* %31, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @NA_IP, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %48

37:                                               ; preds = %28
  %38 = load i32*, i32** %6, align 8
  %39 = load i32, i32* %38, align 4
  %40 = icmp slt i32 %39, 1
  br i1 %40, label %45, label %41

41:                                               ; preds = %37
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %42, align 4
  %44 = icmp sgt i32 %43, 32
  br i1 %44, label %45, label %47

45:                                               ; preds = %41, %37
  %46 = load i32*, i32** %6, align 8
  store i32 32, i32* %46, align 4
  br label %47

47:                                               ; preds = %45, %41
  br label %59

48:                                               ; preds = %28
  %49 = load i32*, i32** %6, align 8
  %50 = load i32, i32* %49, align 4
  %51 = icmp slt i32 %50, 1
  br i1 %51, label %56, label %52

52:                                               ; preds = %48
  %53 = load i32*, i32** %6, align 8
  %54 = load i32, i32* %53, align 4
  %55 = icmp sgt i32 %54, 128
  br i1 %55, label %56, label %58

56:                                               ; preds = %52, %48
  %57 = load i32*, i32** %6, align 8
  store i32 128, i32* %57, align 4
  br label %58

58:                                               ; preds = %56, %52
  br label %59

59:                                               ; preds = %58, %47
  br label %71

60:                                               ; preds = %25
  %61 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %62 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %61, i32 0, i32 0
  %63 = load i64, i64* %62, align 8
  %64 = load i64, i64* @NA_IP, align 8
  %65 = icmp eq i64 %63, %64
  br i1 %65, label %66, label %68

66:                                               ; preds = %60
  %67 = load i32*, i32** %6, align 8
  store i32 32, i32* %67, align 4
  br label %70

68:                                               ; preds = %60
  %69 = load i32*, i32** %6, align 8
  store i32 128, i32* %69, align 4
  br label %70

70:                                               ; preds = %68, %66
  br label %71

71:                                               ; preds = %70, %59
  %72 = load i32, i32* @qfalse, align 4
  store i32 %72, i32* %4, align 4
  br label %73

73:                                               ; preds = %71, %23
  %74 = load i32, i32* %4, align 4
  ret i32 %74
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @NET_StringToAdr(i8*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
